test/lambda/negative/syntax/decimal128_overflow.ls
99999999999999999999999999999999999n
